Changelog Version 0.1.8:
    - Adding Advancements to Rewards:
        - Shading https://github.com/Trigary/AdvancementCreator into the final Jar

Changelog Version 0.1.7:
    - Bugfixes:
        - /ptr reload now doesn't remove all Rewards anymore

    - PlaceholderAPI:
        - Created a "simpler" PAPI-Framework, it is easier to implement new Placeholders
        - Added the following new Placeholders:
            - PLAYTIME_DAYS
            - PLAYTIME_HOURS
            - PLAYTIME_MINUTES
            - PLAYTIME_SECONDS
            - SESSIONTIME_DAYS
            - SESSIONTIME_HOURS
            - SESSIONTIME_MINUTES
            - SESSIONTIME_SECONDS

    - Removed the Reflection when playing Sounds

Changelog Version 0.1.6:
    - Bugfixes:
        - The Permission 'playtimerewards.*' now also contains the Permission 'playtimerewards.cmd.playtime.other.offline'
        - /Playtimetop now displays the Players in the correct and not in the reversed order

    - HexColors in Rewards:
        - Hex-Colors may also now get used in the Rewards.yml file, not just in the Lang.yml File.

    - Messages:
        - Added the following new Messages:
            - CMD_SUC_PTR_EDIT_TYPE_IN_CHAT

    - Further Progress done on editing Rewards in-game:
        - Everything (should) accept HexColors
        - Working on: Refresh all GUIs after making a change
        - Is not released in this Update due to the need of a Hotfix



Changelog Version 0.1.5:
    - Added 1.19 Support

    - Fixed a bug where Versions containing no Patch-Identifier (e.g. 1.18, 1.17...) weren't recognized correctly
      and caused the Plugin to disable itself upon loading.

    - Added the Hex Colors & Hex Color Ranges to "Lang.java" Messages
        - It is possible to specify Hex-Colors by doing "§(fe37aa)I'm a colored Text!" (hex R, G, B Colors)
        - It is also possible to specify a Range by doing "§(ffeeff-)I'm a example Text!§(-00ff00)"
